--- a/ChatGPT.ipynb
+++ b/ChatGPT.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "message = [{\"role\": \"user\", \"content\": gpt_prompt}]\n",
     "response = openai.ChatCompletion.create(\n",
-    "    model=\"gpt-4\",\n",
+    "    model=\"gpt-3.5-turbo\",\n",
     "    messages=message,\n",
     "    temperature=0.2,\n",
     "    max_tokens=1000,\n",
