--- a/ChatGPT.ipynb
+++ b/ChatGPT.ipynb
@@ -9,7 +9,7 @@
     "%pip install tiktoken hashlib openai wandb os python-dotenv\n",
     "import openai\n",
     "import wandb\n",
-    "import dontenv\n",
+    "import dotenv\n",
     "# from tiktoken.models import Tokenizer\n",
     "# import tiktoken\n",
     "import os\n",
@@ -36,7 +36,7 @@
     "# validate\n",
     "assert os.path.exists(os.path.join(tiktoken_cache_dir, \"da02b9d91e6159af431523b25754f7dabf401800.tiktoken\"))\n",
     "\n",
-    "# tokenizer = Tokenizer()\n",
+    "# tokenizer = Tokenizer()a\n",
     "\n",
     "openai.api_key = api_key\n",
     "\n",
