--- a/ChatGPT.ipynb
+++ b/ChatGPT.ipynb
@@ -6,47 +6,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install tiktoken hashlib openai wandb os python-dotenv\n",
+    "# Install the necessary libraries\n",
+    "%pip install tiktoken wandb python-dotenv openai\n",
+    "\n",
+    "import os\n",
     "import openai\n",
     "import wandb\n",
-    "import dotenv\n",
-    "# from tiktoken.models import Tokenizer\n",
-    "# import tiktoken\n",
-    "import os\n",
-    "import hashlib\n",
     "from dotenv import load_dotenv\n",
+    "# from tiktoken import Tokenizer\n",
+    "\n",
     "load_dotenv()\n",
     "\n",
     "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "\n",
-    "# import tiktoken_ext.openai_public\n",
-    "# import inspect\n",
+    "# tiktoken_cache_dir = \"/Users/daniel/Downloads\"\n",
+    "# os.environ[\"TIKTOKEN_CACHE_DIR\"] = tiktoken_cache_dir\n",
     "\n",
-    "# print(dir(tiktoken_ext.openai_public))\n",
+    "# tokenizer = Tokenizer()\n",
     "\n",
-    "# print(inspect.getsource(tiktoken_ext.openai_public.cl100k_base))\n",
-    "\n",
-    "# blobpath = \"https://openaipublic.blob.core.windows.net/encodings/cl100k_base.tiktokens\"\n",
-    "# cache_key = hashlib.sha1(blobpath.encode()).hexdigest()\n",
-    "# print(cache_key)\n",
-    "\n",
-    "tiktoken_cache_dir = \"/Users/daniel/Downloads\"\n",
-    "os.environ[\"TIKTOKEN_CACHE_DIR\"] = tiktoken_cache_dir\n",
-    "\n",
-    "# validate\n",
-    "assert os.path.exists(os.path.join(tiktoken_cache_dir, \"da02b9d91e6159af431523b25754f7dabf401800.tiktoken\"))\n",
-    "\n",
-    "# tokenizer = Tokenizer()a\n",
+    "# If you're using tiktoken, make sure the path to the tiktoken file is valid\n",
+    "# assert os.path.exists(os.path.join(tiktoken_cache_dir, \"da02b9d91e6159af431523b25754f7dabf401800.tiktoken\"))\n",
     "\n",
     "openai.api_key = api_key\n",
     "\n",
     "gpt_prompt = input(\"What prompt do you want to use?\")\n",
     "\n",
-    "# # Check number of tokens in the prompt\n",
+    "# Uncomment and fix if you need to count tokens\n",
     "# prompt_tokens = list(tokenizer.tokenize(gpt_prompt))\n",
     "# print(f\"The prompt contains {len(prompt_tokens)} tokens.\")\n",
-    "\n",
-    "# If the prompt is too long, you might want to shorten it here\n",
     "\n",
     "message = [{\"role\": \"user\", \"content\": gpt_prompt}]\n",
     "response = openai.ChatCompletion.create(\n",
@@ -57,18 +44,18 @@
     "    frequency_penalty=0.0\n",
     ")\n",
     "\n",
-    "# # Check number of tokens in the responsea\n",
-    "# response_text = response['choices'][0]['message']['content']\n",
+    "response_text = response['choices'][0]['message']['content']\n",
+    "\n",
+    "# Uncomment and fix if you need to count tokens\n",
     "# response_tokens = list(tokenizer.tokenize(response_text))\n",
     "# print(f\"The response contains {len(response_tokens)} tokens.\")\n",
     "\n",
-    "# If the response is too long, you might want to truncate it here\n",
-    "\n",
-    "wandb.init()  # Start a new run\n",
-    "prediction_table = wandb.Table(columns=[\"Prompt\", \"Response\", \"Prompt Tokens\", \"Response Tokens\"])\n",
-    "prediction_table.add_data(gpt_prompt, response_text, len(prompt_tokens), len(response_tokens))\n",
-    "wandb.log({\"predictions\": prediction_table})\n",
-    "wandb.finish()  # Finish the run\n"
+    "# Uncomment and fix if you want to log results with Weights and Biases\n",
+    "# wandb.init()  # Start a new run\n",
+    "# prediction_table = wandb.Table(columns=[\"Prompt\", \"Response\"])  # , \"Prompt Tokens\", \"Response Tokens\"])\n",
+    "# prediction_table.add_data(gpt_prompt, response_text)  # , len(prompt_tokens), len(response_tokens))\n",
+    "# wandb.log({\"predictions\": prediction_table})\n",
+    "# wandb.finish()  # Finish the run\n"
    ]
   }
  ],
